# Rust-Matching-Engine

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Readme.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: engine.rs
docs/: README.md
docs/api/: rest-api.md  websocket-api.md
docs/architecture/: hybrid-near-model.md  system-overview.md
docs/database/: migrations.md  schema.md
docs/flows/: README.md  api-mod-rs-flow.md  api-rest-rs-flow.md  api-routing-map.md  api-ws-rs-flow.md  db-mod-rs-flow.md  main-rs-flow.md  pg-mod-rs-flow.md  risk-mod-rs-flow.md
docs/notes/: README.md  ws-rs.md
docs/ops/: deployment.md  environment.md
docs/product/: scope.md  vision.md
docs/runbooks/: incident.md  recovery.md
docs/security/: signing-and-hashing.md
docs/testing/: performance-plan.md  test-strategy.md
logs/: BUILD_LOG.md  RELEASE_LOG.md  THOUGHT_LOG.md
logs/benchmarks/: README.md  engine_microbench.md  http_loadtest.md
logs/plans/: phase_-1.md  plan.md
migrations/: README.md
src/: lib.rs  main.rs
src/api/: mod.rs  rest.rs  ws.rs
src/db/: mod.rs
src/domain/: market.rs  order.rs
src/engine/: matching.rs  mod.rs  orderbook.rs
src/events/: mod.rs
src/ops/: admin.rs
src/pg/: mod.rs
src/replay/: mod.rs
src/risk/: mod.rs
src/sequencer/: mod.rs
src/snapshot/: mod.rs
tests/: README.md
