[package]
name = "clob-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework — async, tower-compatible
axum = { version = "0.7", features = ["ws"] }

# Async runtime — required by axum
tokio = { version = "1", features = ["full"] }

# HTTP middleware (CORS, request tracing)
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization — used for JSON wire format and event log persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SHA-256 hashing — used for canonical order hash computation
sha2 = "0.10"

# ed25519 signatures — traders sign orders, engine verifies them
# Feature "rand_core" is needed to generate key pairs in tests and main
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Hex encoding — order hashes are displayed and stored as hex strings
hex = "0.4"

# Ergonomic error type derivation — every module defines its own Error enum
thiserror = "1"

# UUIDv4 generation — server-assigned order_id (not part of canonical hash)
uuid = { version = "1", features = ["v4"] }

# Random number generation — used in tests to generate ed25519 key pairs
# OsRng provides cryptographically secure randomness from the OS
rand = "0.8"

# PostgreSQL — async driver for event log persistence
# runtime-tokio: use tokio async executor
# postgres: Postgres-specific types and driver
# json: serde_json::Value <-> JSONB codec (used for event payloads)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }

[dev-dependencies]
# ServiceExt::oneshot — drives axum router in tests without a real TCP listener
tower = { version = "0.4", features = ["util"] }
# Temporary directories for snapshot tests
tempfile = "3"
# Benchmarking framework — used in benches/engine.rs
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false
